# dshm-alloc

./: CMakeLists.txt  README.md
docs/: DESIGN.md
docs/superpowers/plans/: 2026-07-14-distributed-chunk-allocator.md
docs/superpowers/specs/: 2026-07-14-distributed-chunk-allocator-design.md
include/: dshm_types.h
src/: .dshm_l2.c.swp  dshm_atomic.h  dshm_l1.c  dshm_l1.h  dshm_l2.c  dshm_l2.h
tests/: CMakeLists.txt  test_l1_cache.c  test_l1_cas.c  test_l1_concurrent.c  test_l2_init.c  test_l2_malloc.c
